--- a/css/style.css
+++ b/css/style.css
@@ -565,4 +565,11 @@ a:hover {
     transform: translateY(0px);
     margin: 30px 0;
   }
+  .display-4 {
+  font-size: 2em;
+  }
+  .w-100
+  {
+    height: 250px;
+  }
 }
